<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".CustomMatcherActivity">

    <EditText
            android:layout_marginTop="30dp"
            android:id="@+id/customMatcherActivityEtUserName"
            android:hint="@string/login_activity_username_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <EditText
            android:id="@+id/customMatcherActivityEtPassword"
            android:hint="@string/login_activity_password_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <Button
            android:id="@+id/customMatcherActivityBtLogin"
            android:text="Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

</LinearLayout>