<resources>
    <string name="app_name">JwtAndroid</string>
</resources>
